created components and setup services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,290 +1,13 @@
-<div class="bg-primary mb-3">
-  <div class="container py-2" style="max-width: 812px">
-      <div class="row align-items-center">
-          <div class="col">
-              <div class="row align-items-center">
-                  <div class="col-auto text-white">
-                      <img src="assets/imgs/ArgProgramaLogo.svg" height="30" width="87.89"
-                          alt="argentina programa logo">
-                  </div>
-                  <div class="col-auto">
-                      <span class="text-white fw-bold">#YoProgramo</span>
-                  </div>
-              </div>
-          </div>
-          <div class="col-auto">
-              <div class="row align-items-center justify-content-end">
-                  <div class="col-auto ps-0">
-                      <div class="btn-group" role="group">
-                          <button id="btnGroupDrop1" type="button"
-                              class="btn btn-primary dropdown-toggle rounded-0" data-bs-toggle="dropdown"
-                              aria-expanded="false">
-                              Socials
-                          </button>
-                          <ul class="dropdown-menu rounded-0" aria-labelledby="btnGroupDrop1">
-                              <li><a class="dropdown-item" href="#"><i class="bi bi-github"></i> Github</a></li>
-                              <li><a class="dropdown-item" href="#"><i class="bi bi-linkedin"></i> LinkedIn</a>
-                              </li>
-                              <li><a class="dropdown-item" href="#"><i class="bi bi-stack-overflow"></i>
-                                      Stackoverflow</a></li>
-                              <li><a class="dropdown-item" href="#"><i class="bi bi-medium"></i> Medium</a></li>
-                              <li><a class="dropdown-item" href="#"><i class="bi bi-twitter"></i> Twitter</a></li>
-                              <li><a class="dropdown-item" href="#"><i class="bi bi-instagram"></i> Instagram</a>
-                              </li>
-                              <li><a class="dropdown-item" href="#"><i class="bi bi-youtube"></i> Youtube</a></li>
-                              <li><a class="dropdown-item" href="#"><i class="bi bi-globe2"></i> Website</a></li>
-                          </ul>
-                      </div>
-                  </div>
-                  <div class="col-auto ps-0">
-                      <button type="button" class="btn btn-outline-light rounded-0 pt-1 pb-2 px-4">Login</button>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
+<app-header></app-header>
+<app-user-header></app-user-header>
+<app-about></app-about>
+<app-experience></app-experience>
+<app-education></app-education>
+<app-skillz></app-skillz>
+<app-projects></app-projects>
+<app-footer></app-footer>
 
-<div class="container position-relative" style="max-width: 812px;">
-  <div class="row-auto">
-      <div class="w-100 bg-secondary" style="min-height: 250px; max-height: 250px; overflow: hidden;">
-          <!-- <img class="img-fluid mx-auto d-block" src="media/Rectangle 6.svg" alt=""> -->
-      </div>
-  </div>
-  <div class="container position-absolute top-100 start-50 translate-middle px-lg-4">
-      <div class="row mb-3">
-          <div class="col-12 col-sm-auto mb-3 mb-sm-0">
-              <img class="mx-auto ms-sm-3 d-block rounded-circle" width="150" height="150"
-                  src="assets/imgs/Rectangle 6.svg" alt="">
-          </div>
-          <div class="col-12 col-sm align-self-end ps-sm-0">
-              <h2 class="mb-0 fw-bold">Nicolas E. Bastida</h2>
-              <h3 class="h6">Fullstack Developer</h3>
-          </div>
-      </div>
-  </div>
-</div>
-<div class="container mt-5 mb-5" style="max-width: 812px;">
-  <div class="row pt-5 px-md-3">
-      <p class="pt-3 pt-sm-0">
-          Detail oriented fullstack developer with an eye for design and some freelance experience. I’m seeking a
-          position with a company where I can provide value through the use of my skills in coding,
-          troubleshooting complex problems and assisting in the timely completion of projects.
-      </p>
-  </div>
-</div>
 
-<div class="container mb-5" style="max-width: 812px;">
-  <h4 class="fw-bold mb-4">Experience</h4>
-  <div class="column">
-      <div class="row mb-3">
-          <div class="row">
-              <div class="col-auto">
-                  <img src="" alt="" width="75" height="75">
-              </div>
-              <div class="col">
-                  <div class="row">
-                      <h5 class="fw-bold">Front-end Developer</h5>
-                  </div>
-                  <div class="row">
-                      <h6>2020 - Current</h6>
-                  </div>
-              </div>
-          </div>
-          <div class="row justify-content-end">
-              <div class="col col-sm-10">
-                  <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Coded using HTML, CSS and JavaScript to develop features for
-                          both mobile and desktop platforms.</li>
-                      <li class="list-group-item">Applied libraries or frameworks like React.js, Tailwind,
-                          MaterialUI, etc. depending on clients needs or requirements.</li>
-                      <li class="list-group-item">Collaborated with clients during development processes to
-                          confirm creative proposalsand design best practices.</li>
-                      <li class="list-group-item">Struck balance between functional and aesthetic designs while
-                          maintaining cohesive branding across sites.</li>
-                      <li class="list-group-item">Authored reusable content modules and developed prototypes.</li>
-                      <li class="list-group-item">Identafied bottlenecks and bugs and devised solutions.</li>
-                  </ul>
-              </div>
-          </div>
-      </div>
 
-      <div class="row">
-          <div class="row">
-              <div class="col-auto">
-                  <img src="" alt="" width="75" height="75">
-              </div>
-              <div class="col">
-                  <div class="row">
-                      <h5 class="fw-bold">Front-end Developer</h5>
-                  </div>
-                  <div class="row">
-                      <h6>2020 - Current</h6>
-                  </div>
-              </div>
-          </div>
-          <div class="row justify-content-end">
-              <div class="col col-sm-10">
-                  <ul class="list-group list-group-flush">
-                      <li class="list-group-item">Coded using HTML, CSS and JavaScript to develop features for
-                          both mobile and desktop platforms.</li>
-                      <li class="list-group-item">Applied libraries or frameworks like React.js, Tailwind,
-                          MaterialUI, etc. depending on clients needs or requirements.</li>
-                      <li class="list-group-item">Collaborated with clients during development processes to
-                          confirm creative proposalsand design best practices.</li>
-                      <li class="list-group-item">Struck balance between functional and aesthetic designs while
-                          maintaining cohesive branding across sites.</li>
-                      <li class="list-group-item">Authored reusable content modules and developed prototypes.</li>
-                      <li class="list-group-item">Identafied bottlenecks and bugs and devised solutions.</li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
 
-<div class="container mb-5" style="max-width: 812px;">
-  <h4 class="fw-bold mb-4">Education</h4>
-  <div class="column">
-      <div class="row mb-3">
-          <div class="row mb-1">
-              <div class="col-auto">
-                  <img src="" alt="" width="75" height="75">
-              </div>
-              <div class="col">
-                  <div class="row">
-                      <h5 class="fw-bold">Front-end Developer</h5>
-                  </div>
-                  <div class="row">
-                      <h6>2020 - Current</h6>
-                  </div>
-              </div>
-          </div>
-          <div class="row justify-content-end">
-              <div class="col col-sm-10">
-                  <p>
-                      Detail oriented fullstack developer with an eye for design and some freelance experience.
-                      I’m seeking a position with a company where I can provide value through the use of my skills
-                      in coding, troubleshooting complex problems and assisting in the timely completion of
-                      projects.
-                  </p>
-              </div>
-          </div>
-      </div>
 
-  </div>
-</div>
-
-<div class="container mb-5" style="max-width: 812px;">
-  <h4 class="fw-bold mb-4">Hard & Soft Skills</h4>
-  <div class="row g-3">
-      <div class="col-12  col-sm-6 col-md-3">
-          <div class="row align-items-center">
-              <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-              <div class="col">
-                  <span class="fw-bold">
-                      JavaScript
-                  </span>
-              </div>
-          </div>
-      </div>
-      <div class="col-12  col-sm-6 col-md-3">
-
-          <div class="row align-items-center">
-              <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-              <div class="col">
-                  <span class="fw-bold">
-                      JavaScript
-                  </span>
-              </div>
-          </div>
-      </div>
-      <div class="col-12  col-sm-6 col-md-3">
-
-          <div class="row align-items-center">
-              <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-              <div class="col">
-                  <span class="fw-bold">
-                      JavaScript
-                  </span>
-              </div>
-          </div>
-      </div>
-      <div class="col-12  col-sm-6 col-md-3">
-
-          <div class="row align-items-center">
-              <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-              <div class="col">
-                  <span class="fw-bold">
-                      JavaScript
-                  </span>
-              </div>
-          </div>
-      </div>
-      <div class="col-12  col-sm-6 col-md-3">
-
-          <div class="row align-items-center">
-              <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-              <div class="col">
-                  <span class="fw-bold">
-                      JavaScript
-                  </span>
-              </div>
-          </div>
-      </div>
-      <div class="col-12  col-sm-6 col-md-3">
-
-          <div class="row align-items-center">
-              <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-              <div class="col">
-                  <span class="fw-bold">
-                      JavaScript
-                  </span>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
-
-<div class="container mb-5" style="max-width: 812px;">
-  <h4 class="fw-bold mb-4">Projects</h4>
-  <div class="column">
-      <div class="row mb-3">
-          <div class="col-12 col-sm mb-2 mb-sm-0">
-              <img class="w-100 h-100" src="" width="350" height="167" alt="">
-          </div>
-          <div class="col px-sm-0">
-              <h5 class="fw-bold">Carpincho.xyz</h5>
-              <h6 class="">JavaScript - React - SASS </h6>
-              <p>Display essential information from the cryptoverse. Carpincho.xyz provides top/trending coins, charting, exchanges, latest news and much more utilizing Coingecko, Tradingview and Bing news API.</p>
-              <div class="row-auto">
-                  <a href="#" class="text-dark">Github</a>
-                  <a href="#" class="text-dark">Website</a>
-              </div>
-          </div>
-      </div>
-      <div class="row mb-3">
-          <div class="col-12 col-sm mb-2 mb-sm-0">
-              <img class="w-100 h-100" src="" width="350" height="167" alt="">
-          </div>
-          <div class="col px-sm-0">
-              <h5 class="fw-bold">Odontodracuello.com.ar</h5>
-              <h6 class="">JavaScript - React - SASS </h6>
-              <p>Display essential information from the cryptoverse. Carpincho.xyz provides top/trending coins, charting, exchanges, latest news and much more utilizing Coingecko, Tradingview and Bing news API.</p>
-              <div class="row-auto">
-                  <a href="#" class="text-dark">Github</a>
-                  <a href="#" class="text-dark">Website</a>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
-
-<div class="container m-5 p-5" style="max-width: 812px;">
-</div>
-
-<div class="container mt-5" style="max-width: 812px;">
-  <p class="d-block text-center mb-1 text-muted">
-  - Final project for Argentina Programa designed & developed by Nicolas E. Bastida -
-  </p>
-</div>
