--- a/src/app/components/user-header/user-header.component.html
+++ b/src/app/components/user-header/user-header.component.html
@@ -1,5 +1,4 @@
 <div class="container position-relative" style="max-width: 812px;">
-    {{testingData.data}}
     <div class="row-auto">
         <div class="w-100 bg-secondary" style="min-height: 250px; max-height: 250px; overflow: hidden;">
             <!-- <img class="img-fluid mx-auto d-block" src="media/Rectangle 6.svg" alt=""> -->
@@ -12,8 +11,8 @@
                     src="assets/imgs/Rectangle 6.svg" alt="">
             </div>
             <div class="col-12 col-sm align-self-end ps-sm-0">
-                <h2 class="mb-0 fw-bold">Nicolas E. Bastida</h2>
-                <h3 class="h6">Fullstack Developer</h3>
+                <h2 class="mb-0 fw-bold">{{headerData.name}}</h2>
+                <h3 class="h6">{{headerData.ocupation}}</h3>
             </div>
         </div>
     </div>
