--- a/src/app/components/skillz/skillz.component.html
+++ b/src/app/components/skillz/skillz.component.html
@@ -1,67 +1,12 @@
 <div class="container mb-5" style="max-width: 812px;">
     <h4 class="fw-bold mb-4">Hard & Soft Skills</h4>
-    <div class="row g-3">
+    <div class="row g-3" *ngFor="let skill of skills">
         <div class="col-12  col-sm-6 col-md-3">
             <div class="row align-items-center">
-                <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
+                <div class="col-auto"><img src={{skill.image.src}} width="51" height="51" alt={{skill.image.alt}}></div>
                 <div class="col">
                     <span class="fw-bold">
-                        JavaScript
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="col-12  col-sm-6 col-md-3">
-  
-            <div class="row align-items-center">
-                <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-                <div class="col">
-                    <span class="fw-bold">
-                        JavaScript
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="col-12  col-sm-6 col-md-3">
-  
-            <div class="row align-items-center">
-                <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-                <div class="col">
-                    <span class="fw-bold">
-                        JavaScript
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="col-12  col-sm-6 col-md-3">
-  
-            <div class="row align-items-center">
-                <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-                <div class="col">
-                    <span class="fw-bold">
-                        JavaScript
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="col-12  col-sm-6 col-md-3">
-  
-            <div class="row align-items-center">
-                <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-                <div class="col">
-                    <span class="fw-bold">
-                        JavaScript
-                    </span>
-                </div>
-            </div>
-        </div>
-        <div class="col-12  col-sm-6 col-md-3">
-  
-            <div class="row align-items-center">
-                <div class="col-auto"><img src="" width="51" height="51" alt=""></div>
-                <div class="col">
-                    <span class="fw-bold">
-                        JavaScript
+                        {{skill.name}}
                     </span>
                 </div>
             </div>
