--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container m-5 p-5" style="max-width: 812px;">
+<div class="container my-5 py-5" style="max-width: 812px;">
 </div>
 
 <div class="container mt-5" style="max-width: 812px;">
