--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
                 <div class="row align-items-center justify-content-end">
                     <div class="col-auto ps-0">
                         <div class="btn-group" role="group">
-                            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle rounded-0"
+                            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle rounded-0" 
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Socials
                             </button>
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="col-auto ps-0">
-                        <button type="button" class="btn btn-outline-light rounded-0 pt-1 pb-2 px-4">Login</button>
+                        <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-outline-light rounded-0 pt-1 pb-2 px-4">Login</button>
                     </div>
                 </div>
             </div>
