--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,7 +1,16 @@
 <div class="container mb-5" style="max-width: 812px;">
-    <h4 class="fw-bold mb-4">Experience</h4>
+    <div class="mb-4 d-flex justify-content-between">
+        <h4 class="fw-bold">Experience</h4>
+        <div class="h-full d-flex align-items-center" *ngIf="isEdit">
+            <button class="btn p-0 border-0 fs-4 text me-3"><i class="bi bi-plus-square"></i></button>
+            <button class="btn p-0 border-0 fs-4 text" (click)="handleEdit()"><i
+                    class="bi bi-check-square"></i></button>
+        </div>
+        <button class="btn p-0 border-0 fs-4 text" (click)="handleEdit()" *ngIf="!isEdit"><i
+                class="bi bi-pencil-square"></i></button>
+    </div>
     <div class="column" *ngFor="let experience of experienceData">
-        <div class="row mb-3" >
+        <div class="row mb-3">
             <div class="row">
                 <div class="col-auto">
                     <img src={{experience.company.image}} alt={{experience.company.alt}} width="75" height="75">
