--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,6 +1,15 @@
 <div class="container mb-5" style="max-width: 812px;">
-    <h4 class="fw-bold mb-4">Projects</h4>
-    <div class="column" *ngFor="let project of projectsData">
+    <div class="mb-4 d-flex justify-content-between">
+        <h4 class="fw-bold">Projects</h4>
+        <div class="h-full d-flex align-items-center" *ngIf="isEdit">
+            <button class="btn p-0 border-0 fs-4 text me-3" (click)="handleAdd() " data-bs-toggle="modal" data-bs-target="#projectsModal"><i class="bi bi-plus-square"></i></button>
+            <button class="btn p-0 border-0 fs-4 text" (click)="handleEdit()"><i
+                    class="bi bi-check-square"></i></button>
+        </div>
+        <button class="btn p-0 border-0 fs-4 text" (click)="handleEdit()" *ngIf="!isEdit"><i
+                class="bi bi-pencil-square"></i></button>
+    </div>
+    <div class="column" [ngClass]="{'hover': isEdit}" *ngFor="let project of projectsData">
         <div class="row mb-3">
             <div class="col-12 col-sm mb-2 mb-sm-0">
                 <img class="w-100 h-100" src={{project.image.src}} width="350" height="167" alt={{project.image.alt}}>
@@ -8,7 +17,7 @@
             <div class="col px-sm-0">
                 <h5 class="fw-bold">{{project.title}}</h5>
                 <h6 class="">{{project.stacc}}</h6>
-                <p>{{project.about}}</p>
+                <p class="" >{{project.about}}</p>
                 <div class="row-auto">
                     <a href={{project.links.github}} class="text-dark me-3">Github</a>
                     <a href={{project.links.website}} class="text-dark">Website</a>
@@ -17,3 +26,4 @@
         </div>
     </div>
   </div>
+<app-projects-module></app-projects-module>
