--- a/src/app/components/user-header/user-header.component.html
+++ b/src/app/components/user-header/user-header.component.html
@@ -1,4 +1,5 @@
 <div class="container position-relative" style="max-width: 812px;">
+    <button class="btn p-0 border-0 fs-4 text me-3 position-absolute top-100 end-0" style="z-index: 1;" data-bs-toggle="modal" data-bs-target="#profileModal"><i class="bi bi-pencil-square"></i></button>
     <div class="row-auto">
         <div class="w-100 bg-secondary" style="min-height: 250px; max-height: 250px; overflow: hidden;">
             <!-- <img class="img-fluid mx-auto d-block" src="media/Rectangle 6.svg" alt=""> -->
@@ -17,3 +18,4 @@
         </div>
     </div>
 </div>
+<app-profile-module></app-profile-module>
