--- a/src/app/components/profile-module/profile-module.component.html
+++ b/src/app/components/profile-module/profile-module.component.html
@@ -1,16 +1,63 @@
 <div class="modal fade" tabindex="-1" id="profileModal">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content rounded-0">
             <div class="modal-header">
                 <h5 class="modal-title fw-bold">Profile</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                
+                <div class="mb-3">
+                    <label for="formFileSm" class="form-label fw-bold">Profile Image (max size 5mb)</label>
+                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                </div>
+                <div class="mb-3">
+                    <label for="formFileSm" class="form-label fw-bold">Banner Image (max size 5mb)</label>
+                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Full Name</label>
+                    <input class="form-control form-control-sm" type="text" placeholder="Ernesto Pedrastra" aria-label="name input">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Job Title</label>
+                    <input class="form-control form-control-sm" type="text" placeholder="Sr. Pancake" aria-label="name input">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">About</label>
+                    <textarea class="form-control" id="about" rows="3"></textarea>
+                </div>
+                <div class="">
+                    <div class="row">
+                        <h6 class="col fw-bold">Social Links</h6>
+                        <div class="col-2 text-end">
+                            <button (click)="handleAddLink()" class="btn p-0 border-0 fs-5"><i class="bi bi-plus-square"></i></button>
+                        </div>
+                    </div>
+                    <div class="mb-3" *ngIf="addLink">
+                        <div class="mb-2">
+                            <label for="exampleInputEmail1" class="form-label">Name</label>
+                            <input class="form-control form-control-sm" type="text" placeholder="Github" aria-label="name input">
+                        </div>
+                        <div class="mb-2">
+                            <label for="exampleInputEmail1" class="form-label">Link</label>
+                            <input class="form-control form-control-sm" type="text" placeholder="https://github.com" aria-label="name input">
+                        </div>
+                        <div class="mb-2">
+                            <label for="exampleInputEmail1" class="form-label">Icon (<a href="https://icons.getbootstrap.com/" target="_blank">copy classes from here</a>)</label>
+                            <input class="form-control form-control-sm" type="text" placeholder="bi bi-github" aria-label="name input">
+                        </div>
+                        <button class="btn btn-primary rounded-0" type="submit">Add</button>
+                    </div>
+                    <ul class="p-0">
+                        <li class="row">
+                            <i class="bi bi-github col-1"></i><p class="col">Github</p><button class="btn col-1 p-0 border-0"><i class="bi bi-trash-fill"></i></button>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal" >Close</button>
-                <button type="button" class="btn btn-primary rounded-0" >Save</button>
+                <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary rounded-0">Save</button>
             </div>
         </div>
     </div>
