made all editing/adding modal ui

--- a/src/app/components/profile-module/profile-module.component.html
+++ b/src/app/components/profile-module/profile-module.component.html
@@ -7,11 +7,11 @@
             </div>
             <div class="modal-body">
                 <div class="mb-3">
-                    <label for="formFileSm" class="form-label fw-bold">Profile Image (max size 5mb)</label>
+                    <label for="formFileSm" class="form-label fw-bold">Profile Image (5mb max)</label>
                     <input class="form-control form-control-sm" id="formFileSm" type="file">
                 </div>
                 <div class="mb-3">
-                    <label for="formFileSm" class="form-label fw-bold">Banner Image (max size 5mb)</label>
+                    <label for="formFileSm" class="form-label fw-bold">Banner Image (5mb max)</label>
                     <input class="form-control form-control-sm" id="formFileSm" type="file">
                 </div>
                 <div class="mb-3">
@@ -28,7 +28,7 @@
                 </div>
                 <div class="">
                     <div class="row">
-                        <h6 class="col fw-bold">Social Links</h6>
+                        <h6 class="col fw-bold m-0">Social Links</h6>
                         <div class="col-2 text-end">
                             <button (click)="handleAddLink()" class="btn p-0 border-0 fs-5"><i class="bi bi-plus-square"></i></button>
                         </div>
@@ -50,7 +50,7 @@
                     </div>
                     <ul class="p-0">
                         <li class="row">
-                            <i class="bi bi-github col-1"></i><p class="col">Github</p><button class="btn col-1 p-0 border-0"><i class="bi bi-trash-fill"></i></button>
+                            <i class="bi bi-github col-1"></i><p class="col m-0">Github</p><button class="btn col-1 p-0 border-0"><i class="bi bi-trash-fill"></i></button>
                         </li>
                     </ul>
                 </div>
