--- a/src/app/components/education-module/education-module.component.html
+++ b/src/app/components/education-module/education-module.component.html
@@ -6,11 +6,31 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                
+                <div class="mb-3">
+                    <label for="formFileSm" class="form-label fw-bold">Company Logo (5mb max)</label>
+                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Name</label>
+                    <input class="form-control form-control-sm" type="text" placeholder="Argentina Programa (Full Stack Developer)"
+                        aria-label="name input">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Education Time</label>
+                    <div class="d-flex">
+                        <input class="form-control form-control-sm" type="date" aria-label="start date input">
+                        <p class="m-0 px-2">-</p>
+                        <input class="form-control form-control-sm" type="date" aria-label="end date input">
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">About</label>
+                    <textarea class="form-control" id="about" rows="3"></textarea>
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal" >Close</button>
-                <button type="button" class="btn btn-primary rounded-0" >Save</button>
+                <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary rounded-0">Save</button>
             </div>
         </div>
     </div>
