--- a/src/app/components/experience-module/experience-module.component.html
+++ b/src/app/components/experience-module/experience-module.component.html
@@ -6,11 +6,53 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                
+                <div class="mb-3">
+                    <label for="formFileSm" class="form-label fw-bold">Company Logo (5mb max)</label>
+                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Name</label>
+                    <input class="form-control form-control-sm" type="text" placeholder="FullDev (Front-end Developer)"
+                        aria-label="name input">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Work Time</label>
+                    <div class="d-flex">
+                        <input class="form-control form-control-sm" type="date" 
+                            aria-label="start date input">
+                        <p class="m-0 px-2">-</p>
+                        <input class="form-control form-control-sm" type="date"
+                            aria-label="end date input">
+                    </div>
+                </div>
+                <div class="">
+                    <div class="row">
+                        <h6 class="col fw-bold m-0">Action List</h6>
+                        <div class="col-2 text-end">
+                            <button (click)="handleAddListItem()" class="btn p-0 border-0 fs-5"><i
+                                    class="bi bi-plus-square"></i></button>
+                        </div>
+                    </div>
+                    <div class="mb-3" *ngIf="addListItem">
+                        <div class="mb-2">
+                            <input class="form-control form-control-sm" type="text"
+                                placeholder="Worked with clients 1 on 1" aria-label="name input">
+                        </div>
+                        <button class="btn btn-primary rounded-0" type="submit">Add</button>
+                    </div>
+                    <ul class="ps-3">
+                        <li class="">
+                            <div class="row">
+                                <p class="col m-0">Worked with clients 1 on 1</p><button
+                                    class="btn col-1 p-0 border-0"><i class="bi bi-trash-fill"></i></button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal" >Close</button>
-                <button type="button" class="btn btn-primary rounded-0" >Save</button>
+                <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary rounded-0">Save</button>
             </div>
         </div>
     </div>
