--- a/src/app/components/skills-module/skills-module.component.html
+++ b/src/app/components/skills-module/skills-module.component.html
@@ -6,11 +6,19 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                
+                <div class="mb-3">
+                    <label for="formFileSm" class="form-label fw-bold">Logo (5mb max)</label>
+                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Name</label>
+                    <input class="form-control form-control-sm" type="text"
+                        placeholder="React.js" aria-label="name input">
+                </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal" >Close</button>
-                <button type="button" class="btn btn-primary rounded-0" >Save</button>
+                <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary rounded-0">Save</button>
             </div>
         </div>
     </div>
