--- a/src/app/components/experience-module/experience-module.component.html
+++ b/src/app/components/experience-module/experience-module.component.html
@@ -18,19 +18,18 @@
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Work Time</label>
                     <div class="d-flex">
-                        <input class="form-control form-control-sm" type="date" 
-                            aria-label="start date input">
+                        <input class="form-control form-control-sm" type="date" aria-label="start date input">
                         <p class="m-0 px-2">-</p>
-                        <input class="form-control form-control-sm" type="date"
-                            aria-label="end date input">
+                        <input class="form-control form-control-sm" type="date" aria-label="end date input">
                     </div>
                 </div>
                 <div class="">
                     <div class="row">
                         <h6 class="col fw-bold m-0">Action List</h6>
                         <div class="col-2 text-end">
-                            <button (click)="handleAddListItem()" class="btn p-0 border-0 fs-5"><i
-                                    class="bi bi-plus-square"></i></button>
+                            <button (click)="handleAddListItem()" class="btn p-0 border-0 fs-5">
+                                <i [ngClass]="{'bi bi-dash-square':addListItem,'bi bi-plus-square':!addListItem}"></i>
+                            </button>
                         </div>
                     </div>
                     <div class="mb-3" *ngIf="addListItem">
@@ -38,7 +37,7 @@
                             <input class="form-control form-control-sm" type="text"
                                 placeholder="Worked with clients 1 on 1" aria-label="name input">
                         </div>
-                        <button class="btn btn-primary rounded-0" type="submit">Add</button>
+                        <button class="btn btn-primary rounded-0 btn-sm" type="submit">Add</button>
                     </div>
                     <ul class="ps-3">
                         <li class="">
