--- a/src/app/components/profile-module/profile-module.component.html
+++ b/src/app/components/profile-module/profile-module.component.html
@@ -30,7 +30,9 @@
                     <div class="row">
                         <h6 class="col fw-bold m-0">Social Links</h6>
                         <div class="col-2 text-end">
-                            <button (click)="handleAddLink()" class="btn p-0 border-0 fs-5"><i class="bi bi-plus-square"></i></button>
+                            <button (click)="handleAddLink()" class="btn p-0 border-0 fs-5">
+                                <i [ngClass]="{'bi bi-dash-square':addLink,'bi bi-plus-square':!addLink}"></i>
+                            </button>
                         </div>
                     </div>
                     <div class="mb-3" *ngIf="addLink">
@@ -46,7 +48,7 @@
                             <label for="exampleInputEmail1" class="form-label">Icon (<a href="https://icons.getbootstrap.com/" target="_blank">copy classes from here</a>)</label>
                             <input class="form-control form-control-sm" type="text" placeholder="bi bi-github" aria-label="name input">
                         </div>
-                        <button class="btn btn-primary rounded-0" type="submit">Add</button>
+                        <button class="btn btn-primary rounded-0 btn-sm" type="submit">Add</button>
                     </div>
                     <ul class="p-0">
                         <li class="row">
