--- a/src/app/components/projects-module/projects-module.component.html
+++ b/src/app/components/projects-module/projects-module.component.html
@@ -19,12 +19,23 @@
                     <label for="exampleInputEmail1" class="form-label fw-bold">About</label>
                     <textarea class="form-control" id="about" rows="3"></textarea>
                 </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Github Link</label>
+                    <input class="form-control form-control-sm" type="text" placeholder="https://github.com/BastidaNicolas/CarpinchoMarkets"
+                        aria-label="name input">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label fw-bold">Website Link</label>
+                    <input class="form-control form-control-sm" type="text" placeholder="https://carpincho.xyz/"
+                        aria-label="name input">
+                </div>
                 <div class="">
                     <div class="row">
                         <h6 class="col fw-bold m-0">Tech List</h6>
                         <div class="col-2 text-end">
-                            <button (click)="handleAddListItem()" class="btn p-0 border-0 fs-5"><i
-                                    class="bi bi-plus-square"></i></button>
+                            <button (click)="handleAddListItem()" class="btn p-0 border-0 fs-5">
+                                <i [ngClass]="{'bi bi-dash-square':addListItem,'bi bi-plus-square':!addListItem}"></i>
+                            </button>
                         </div>
                     </div>
                     <div class="mb-3" *ngIf="addListItem">
@@ -32,7 +43,7 @@
                             <input class="form-control form-control-sm" type="text"
                                 placeholder="Tailwind" aria-label="name input">
                         </div>
-                        <button class="btn btn-primary rounded-0" type="submit">Add</button>
+                        <button class="btn btn-primary rounded-0 btn-sm" type="submit">Add</button>
                     </div>
                     <ul class="ps-3">
                         <li class="">
